# graphics_v3

./: .gitignore  Cargo.toml  Makefile  benchmark  build-timer  compare.sh  config.toml  log-archive.txt  log.txt  readme.md  timestamps.txt  timing.txt  tmp  todo.md  working_notes.md
archive/: _cie_color_matching_functions.rs
benches/: example.rs
docs/: foreshortening.md  handedness.md  ownership.md  pipeline.md  transforms.md
models/: cube.mtl
src/: application.rs  benchmark.rs  camera.rs  cie_color_matching_functions.rs  colorspace_conversion.rs  coordinate_space.rs  draw_box.rs  empty.rs  entity.rs  geometry_pipeline.rs  graphics.rs  import_config.rs  lighting.rs  line_plotting.rs  load_object_file.rs  luminous_efficiency.rs  main.rs  material.rs  object.rs  orientation.rs  path_tracing.rs  pixel_shader.rs  primitives.rs  rasterization.rs  rendering_equation.rs  scene.rs  transformations.rs  window.rs  xxx.rs
src/color/: cie_color_matching_functions.rs  colorspace_conversion.rs  draw_chromaticity_diagram.rs  luminous_efficiency.rs  mod.rs
src/geometry/: mod.rs  orientation.rs  primitives.rs  transformations.rs
src/rasterization/: line_plotting.rs  mod.rs  rasterization.rs
src/ray_tracing/: mod.rs  path_tracing.rs  pixel_shader.rs  ray_polygon_intersection.rs  ray_sphere_intersection.rs  rendering_equation.rs
src/scene/: scene.rs  scenes.rs
