[package]
name = "graphics_v3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
ndarray = "0.15.6"
rand = "0.8.5"
stopwatch = "0.0.7"
toml = "0.8.8"

# # for windowing tutorial
# winit = "0.28"
# env_logger = "0.10"
# log = "0.4"
# wgpu = "0.17"
[dev-dependencies]
criterion = "0.5.1"
cargo-update = "13.2.0"
iai = "0.1.1"

[[bench]]
name = "example"
harness = false

[profile.release]
# lto = "fat"
# codegen-units = 1
opt-level = 3
debug = false
# target-cpu = "native"

# [build]
# rustflags = ["-Z", "threads=8"]


